All voucher codes now are in vouchers directory and they all work and automatically convert