@@ -17,20 +17,19 @@ import org.bukkit.configuration.file.FileConfiguration;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.plugin.java.JavaPlugin;
 import us.crazycrew.crazyenvoys.common.utils.MiscUtils;
-
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class Voucher {
 
     private final ItemBuilder itemBuilder;
     
+    private final FileConfiguration file;
     private final String name;
     private boolean usesArgs;
-    private boolean glowing;
+    private final boolean glowing;
     private final String usedMessage;
     private final boolean whitelistPermissionToggle;
     private final List<String> whitelistPermissions = new ArrayList<>();
@@ -60,159 +59,138 @@ public class Voucher {
     private String requiredPlaceholdersMessage;
 
     private final CrazyVouchers plugin = JavaPlugin.getPlugin(CrazyVouchers.class);
-    private final CrazyManager crazyManager = this.plugin.getCrazyManager();
 
     private final Methods methods = this.plugin.getMethods();
-
-    /**
-     * This is just used for imputing fake vouchers.
-     *
-     * @param number Fake Voucher Number.
-     */
-    public Voucher(int number) {
-        this.name = number + "";
-        this.usesArgs = false;
-        this.itemBuilder = new ItemBuilder().setMaterial("Stone").setName(number + "");
-        this.usedMessage = "";
-        this.whitelistPermissionToggle = false;
-        this.whitelistPermissionMessage = "";
-        this.whitelistWorldsToggle = false;
-        this.whitelistWorldMessage = "";
-        this.blacklistPermissionsToggle = false;
-        this.blacklistPermissionMessage = "blacklistPermissionMessage";
-        this.limiterToggle = false;
-        this.limiterLimit = 0;
-        this.twoStepAuthentication = false;
-        this.soundToggle = false;
-        this.fireworkToggle = false;
-        this.isEdible = false;
-        this.requiredPlaceholdersMessage = "";
-    }
     
-    public Voucher(String name) {
+    public Voucher(FileConfiguration fileConfiguration, String name) {
         this.name = name;
+        this.file = fileConfiguration;
         this.usesArgs = false;
 
-        FileConfiguration config = Files.CONFIG.getFile();
-        String path = "Vouchers." + name;
+        String path = "voucher.";
 
         this.itemBuilder = new ItemBuilder()
-                .setMaterial(config.getString(path + ".Item", "Stone"))
-                .setName(config.getString(path + ".Name", ""))
-                .setLore(config.getStringList(path + ".Lore"))
-                .setPlayerName(config.getString(path + ".Player"))
-                .setFlagsFromStrings(config.getStringList(path + ".Flags"));
+                .setMaterial(this.file.getString(path + ".item", "Stone"))
+                .setName(this.file.getString(path + ".name", ""))
+                .setLore(this.file.getStringList(path + ".lore"))
+                .setPlayerName(this.file.getString(path + ".player"))
+                .setFlagsFromStrings(this.file.getStringList(path + ".flags"));
 
-        if (config.contains(path + ".DisplayDamage")) this.itemBuilder.setDamage(config.getInt(path + ".DisplayDamage"));
+        if (this.file.contains(path + ".display-damage")) this.itemBuilder.setDamage(this.file.getInt(path + ".display-damage"));
 
-        if (config.contains(path + ".DisplayTrim.Material") && config.contains(path + ".DisplayTrim.Pattern")) {
-            this.itemBuilder.setTrimMaterial(Registry.TRIM_MATERIAL.get(NamespacedKey.minecraft(config.getString(path + ".DisplayTrim.Material", "QUARTZ").toLowerCase())))
-                    .setTrimPattern(Registry.TRIM_PATTERN.get(NamespacedKey.minecraft(config.getString(path + ".DisplayTrim.Pattern", "SENTRY").toLowerCase())));
+        if (this.file.contains(path + ".display-trim.material") && this.file.contains(path + ".display-trim.pattern")) {
+            this.itemBuilder.setTrimMaterial(Registry.TRIM_MATERIAL.get(NamespacedKey.minecraft(this.file.getString(path + ".display-trim.material", "QUARTZ").toLowerCase())))
+                    .setTrimPattern(Registry.TRIM_PATTERN.get(NamespacedKey.minecraft(this.file.getString(path + ".display-trim.pattern", "SENTRY").toLowerCase())));
         }
 
-        this.glowing = config.getBoolean(path + ".Glowing");
+        this.glowing = this.file.getBoolean(path + ".glowing");
 
-        if (this.itemBuilder.getName().toLowerCase().contains("%arg%")) this.usesArgs = true;
+        if (this.itemBuilder.getName().toLowerCase().contains("{arg}")) this.usesArgs = true;
 
         if (!this.usesArgs) {
             for (String lore : this.itemBuilder.getLore()) {
-                if (lore.toLowerCase().contains("%arg%")) {
+                if (lore.toLowerCase().contains("{arg}")) {
                     this.usesArgs = true;
                     break;
                 }
             }
         }
 
-        this.commands = config.getStringList(path + ".Commands");
+        if (this.file.contains(path + ".commands")) this.commands = this.file.getStringList(path + ".commands");
 
-        for (String commands : config.getStringList(path + ".Random-Commands")) {
-            this.randomCommands.add(new VoucherCommand(commands));
-        }
-
-        for (String line : config.getStringList(path + ".Chance-Commands")) { // - '%chance% %command%, %command%, %command%, ... etc'
-            try {
-                String[] split = line.split(" ");
-                VoucherCommand voucherCommand = new VoucherCommand(line.substring(split[0].length() + 1));
-
-                for (int i = 1; i <= Integer.parseInt(split[0]); i++) {
-                    this.chanceCommands.add(voucherCommand);
-                }
-            } catch (Exception exception) {
-                LegacyLogger.error("An issue occured when trying to use chance commands.", exception);
+        if (this.file.contains(path + ".random-commands")) {
+            for (String commands : this.file.getStringList(path + ".random-commands")) {
+                this.randomCommands.add(new VoucherCommand(commands));
             }
         }
 
-        this.items.addAll(this.crazyManager.getItems(config, this.name));
+        if (this.file.contains(path + ".chance-commands")) {
+            for (String line : this.file.getStringList(path + ".chance-commands")) { // - '{chance} {command}, {command}, {command}, ... etc'
+                try {
+                    String[] split = line.split(" ");
+                    VoucherCommand voucherCommand = new VoucherCommand(line.substring(split[0].length() + 1));
 
-        this.usedMessage = getMessage(path + ".Options.Message");
+                    for (int i = 1; i <= Integer.parseInt(split[0]); i++) {
+                        this.chanceCommands.add(voucherCommand);
+                    }
+                } catch (Exception exception) {
+                    LegacyLogger.error("An issue occurred when trying to use chance commands.", exception);
+                }
+            }
+        }
 
-        if (config.contains(path + ".Options.Permission.Whitelist-Permission")) {
-            this.whitelistPermissionToggle = config.getBoolean(path + ".Options.Permission.Whitelist-Permission.Toggle");
+        CrazyManager crazyManager = this.plugin.getCrazyManager();
+        this.items.addAll(crazyManager.getItems(file, this.name));
 
-            if (config.contains(path + ".Options.Permission.Whitelist-Permission.Node")) this.whitelistPermissions.add("voucher." + config.getString(path + ".Options.Permission.Whitelist-Permission.Node").toLowerCase());
+        this.usedMessage = getMessage(path + ".options.message", fileConfiguration);
 
-            this.whitelistPermissions.addAll(config.getStringList(path + ".Options.Permission.Whitelist-Permission.Permissions").stream().map(String :: toLowerCase).collect(Collectors.toList()));
-            this.whitelistCommands = config.getStringList(path + ".Options.Permission.Whitelist-Permission.Commands");
-            this.whitelistPermissionMessage = config.contains(path + ".Options.Permission.Whitelist-Permission.Message") ? getMessage(path + ".Options.Permission.Whitelist-Permission.Message") : Translation.no_permission_to_use_voucher.getString();
+        if (this.file.contains(path + ".options.permission.whitelist-permission")) {
+            this.whitelistPermissionToggle = this.file.getBoolean(path + ".options.permission.whitelist-permission.toggle");
+
+            if (this.file.contains(path + ".options.permission.whitelist-permission.node")) this.whitelistPermissions.add(this.file.getString(path + ".options.permission.whitelist-permission.node").toLowerCase());
+
+            this.whitelistPermissions.addAll(this.file.getStringList(path + ".options.permission.whitelist-permission.permissions").stream().map(String::toLowerCase).toList());
+            this.whitelistCommands = this.file.getStringList(path + ".options.permission.whitelist-permission.commands");
+            this.whitelistPermissionMessage = this.file.contains(path + ".options.permission.whitelist-permission.message") ? getMessage(path + ".options.permission.whitelist-permission.message", fileConfiguration) : Translation.no_permission_to_use_voucher.getString();
         } else {
             this.whitelistPermissionToggle = false;
         }
 
-        if (config.contains(path + ".Options.Whitelist-Worlds.Toggle")) {
-            this.whitelistWorlds.addAll(config.getStringList(path + ".Options.Whitelist-Worlds.Worlds").stream().map(String :: toLowerCase).toList());
+        if (this.file.contains(path + ".options.whitelist-worlds.toggle")) {
+            this.whitelistWorlds.addAll(this.file.getStringList(path + ".options.whitelist-worlds.worlds").stream().map(String :: toLowerCase).toList());
 
-            if (config.contains(path + ".Options.Whitelist-Worlds.Message")) {
-                this.whitelistWorldMessage = getMessage(path + ".Options.Whitelist-Worlds.Message");
+            if (this.file.contains(path + ".options.whitelist-worlds.message")) {
+                this.whitelistWorldMessage = getMessage(path + ".options.whitelist-worlds.message", fileConfiguration);
             } else {
                 this.whitelistWorldMessage = Translation.not_in_whitelisted_world.getString();
             }
 
-            this.whitelistWorldCommands = config.getStringList(path + ".Options.Whitelist-Worlds.Commands");
-            this.whitelistWorldsToggle = !this.whitelistWorlds.isEmpty() && config.getBoolean(path + ".Options.Whitelist-Worlds.Toggle");
+            this.whitelistWorldCommands = this.file.getStringList(path + ".options.whitelist-worlds.commands");
+            this.whitelistWorldsToggle = !this.whitelistWorlds.isEmpty() && this.file.getBoolean(path + ".options.whitelist-worlds.toggle");
         } else {
             this.whitelistWorldsToggle = false;
         }
 
-        if (config.contains(path + ".Options.Permission.Blacklist-Permissions")) {
-            this.blacklistPermissionsToggle = config.getBoolean(path + ".Options.Permission.Blacklist-Permissions.Toggle");
+        if (this.file.contains(path + ".options.permission.blacklist-permission")) {
+            this.blacklistPermissionsToggle = this.file.getBoolean(path + ".Options.Permission.blacklist-Permission.toggle");
 
-            if (config.contains(path + ".Options.Permission.Blacklist-Permissions.Message")) {
-                this.blacklistPermissionMessage = getMessage(path + ".Options.Permission.Blacklist-Permissions.Message");
+            if (this.file.contains(path + ".options.permission.blacklist-permission.message")) {
+                this.blacklistPermissionMessage = getMessage(path + ".options.permission.blacklist-permission.message", fileConfiguration);
             } else {
                 this.blacklistPermissionMessage = Translation.has_blacklist_permission.getString();
             }
 
-            this.blacklistPermissions = config.getStringList(path + ".Options.Permission.Blacklist-Permissions.Permissions");
-            this.blacklistCommands = config.getStringList(path + ".Options.Permission.Blacklist-Permissions.Commands");
+            this.blacklistPermissions = this.file.getStringList(path + ".options.permission.blacklist-permission.permissions");
+            this.blacklistCommands = this.file.getStringList(path + ".options.permission.blacklist-permission.commands");
         } else {
             this.blacklistPermissionsToggle = false;
         }
 
-        if (config.contains(path + ".Options.Limiter")) {
-            this.limiterToggle = config.getBoolean(path + ".Options.Limiter.Toggle");
-            this.limiterLimit = config.getInt(path + ".Options.Limiter.Limit");
+        if (this.file.contains(path + ".options.limiter")) {
+            this.limiterToggle = this.file.getBoolean(path + ".options.limiter.toggle");
+            this.limiterLimit = this.file.getInt(path + ".options.limiter.limit");
         } else {
             this.limiterToggle = false;
         }
 
-        if (config.contains(path + ".Options.Required-Placeholders-Message")) {
-            this.requiredPlaceholdersMessage = getMessage(path + ".Options.Required-Placeholders-Message");
+        if (this.file.contains(path + ".options.required-placeholders-message")) {
+            this.requiredPlaceholdersMessage = getMessage(path + ".options.required-placeholders-message", fileConfiguration);
         }
 
-        if (config.contains(path + ".Options.Required-Placeholders")) {
-            for (String key : config.getConfigurationSection(path + ".Options.Required-Placeholders").getKeys(false)) {
-                String placeholder = config.getString(path + ".Options.Required-Placeholders." + key + ".Placeholder");
-                String value = config.getString(path + ".Options.Required-Placeholders." + key + ".Value");
+        if (this.file.contains(path + ".options.required-placeholders")) {
+            for (String key : this.file.getConfigurationSection(path + ".options.required-placeholders").getKeys(false)) {
+                String placeholder = this.file.getString(path + ".options.required-placeholders." + key + ".placeholder");
+                String value = this.file.getString(path + ".options.required-placeholders." + key + ".value");
                 this.requiredPlaceholders.put(placeholder, value);
             }
         }
 
-        this.twoStepAuthentication = config.contains(path + ".Options.Two-Step-Authentication") && config.getBoolean(path + ".Options.Two-Step-Authentication.Toggle");
+        this.twoStepAuthentication = this.file.contains(path + ".options.two-step-authentication") && this.file.getBoolean(path + ".options.two-step-authentication.toggle");
 
-        if (config.contains(path + ".Options.Sound")) {
-            this.soundToggle = config.getBoolean(path + ".Options.Sound.Toggle");
+        if (this.file.contains(path + ".options.sound")) {
+            this.soundToggle = this.file.getBoolean(path + ".options.sound.toggle");
 
-            for (String sound : config.getStringList(path + ".Options.Sound.Sounds")) {
+            for (String sound : this.file.getStringList(path + ".options.sound.sounds")) {
                 try {
                     this.sounds.add(Sound.valueOf(sound));
                 } catch (Exception ignored) {}
@@ -221,8 +199,8 @@ public class Voucher {
             this.soundToggle = false;
         }
 
-        if (config.getBoolean(path + ".Options.Firework.Toggle")) {
-            for (String color : config.getString(path + ".Options.Firework.Colors", "").split(", ")) {
+        if (this.file.getBoolean(path + ".options.firework.toggle")) {
+            for (String color : this.file.getString(path + ".options.firework.colors", "").split(", ")) {
                 this.fireworkColors.add(DyeUtils.getColor(color));
             }
 
@@ -231,7 +209,7 @@ public class Voucher {
             this.fireworkToggle = false;
         }
 
-        if (config.getBoolean(path + ".Options.Is-Edible")) {
+        if (this.file.getBoolean(path + ".options.is-edible")) {
             this.isEdible = itemBuilder.build().getType().isEdible();
 
             switch (this.itemBuilder.getMaterial().toString()) {
@@ -265,11 +243,11 @@ public class Voucher {
     }
     
     public ItemStack buildItem(String argument, int amount) {
-        ItemStack item = this.itemBuilder.setAmount(amount).addLorePlaceholder("%Arg%", argument).addNamePlaceholder("%Arg%", argument).setGlow(this.glowing).build();
+        ItemStack item = this.itemBuilder.setAmount(amount).addLorePlaceholder("{arg}", argument).addNamePlaceholder("{arg}", argument).setGlow(this.glowing).build();
 
         NBTItem nbt = new NBTItem(item);
 
-        nbt.setString("voucher", this.name);
+        nbt.setString("voucher", this.file.getName());
         nbt.setString("argument", argument);
 
         return nbt.getItem();
@@ -383,22 +361,20 @@ public class Voucher {
         return this.isEdible;
     }
 
-    //TODO() Move to their own config file.
-    private String getMessage(String path) {
-        FileConfiguration config = Files.CONFIG.getFile();
+    private String getMessage(String path, FileConfiguration file) {
         String messageString;
 
-        if (isList(path)) {
-            messageString = LegacyUtils.color(MiscUtils.convertList(config.getStringList(path)));
+        if (isList(path, file)) {
+            messageString = LegacyUtils.color(MiscUtils.convertList(file.getStringList(path)));
         } else {
-            messageString = config.getString(path, "");
+            messageString = file.getString(path, "");
             if (!messageString.isEmpty()) messageString = this.methods.getPrefix(messageString);
         }
 
         return messageString;
     }
     
-    private boolean isList(String path) {
-        return Files.CONFIG.getFile().contains(path) && !Files.CONFIG.getFile().getStringList(path).isEmpty();
+    private boolean isList(String path, FileConfiguration file) {
+        return file.contains(path) && !file.getStringList(path).isEmpty();
     }
 }
